# hawthorn_os

./: .gitignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.en.md  README.md  SECURITY.md  _typos.toml  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
.cursor/rules/: hawthorn-core.mdc  hawthorn-docs-bilingual.mdc  hawthorn-docs.mdc  hawthorn-kernel-rust.mdc  hawthorn-workspace.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug_report.md  02-feature_request.md  03-documentation.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  BOOT.md  BUGFIX_NOTES.md  CODE_STYLE.md  COMMIT_CONVENTIONS.md  EL0_BUGS.md  EL0缺陷.md  GLOSSARY.md  KERNEL.md  M6_MMU调试日志.md  M6_REMAINING_PLAN.md  M6剩余计划.md  M6计划.md  PLATFORMS.md  PORTING.md  PR_ISSUE_PLAN.md  PR与议题计划.md  README.md  SYSCALL_ABI.md  TESTING.md  TODO.md  TRAP.md  代码风格.md  内核.md  平台.md  引导.md  待办.md  接口.md  提交约定.md  术语.md  架构.md  测试.md  移植.md  系统调用ABI.md  缺陷修复笔记.md  陷入与异常.md
docs/en/: API.md  ARCHITECTURE.md  BOOT.md  BUGFIX_NOTES.md  CODE_STYLE.md  COMMIT_CONVENTIONS.md  EL0_BUGS.md  GLOSSARY.md  KERNEL.md  M6_MMU_DEBUG_LOG.md  M6_REMAINING_PLAN.md  PLATFORMS.md  PORTING.md  PR_ISSUE_PLAN.md  README.md  SYSCALL_ABI.md  TESTING.md  TODO.md  TRAP.md
kernel/: Cargo.toml  build.rs  link-qemu_virt.ld
kernel/src/: boot_qemu_virt.rs  console.rs  endpoint.rs  frame_alloc.rs  gic.rs  irq.rs  lib.rs  mm.rs  syscall.rs  task.rs  task_policy.rs  timer.rs  trap.rs  trap_frame.rs  user_layout.rs
kernel/tests/: host_integration_smoke.rs
qemu_minimal/: Cargo.toml  build.rs  link-qemu_virt.ld
qemu_minimal/src/: lib.rs  main.rs
scripts/: commit_msg_bilingual.py  run_qemu_minimal.sh  verify_kernel_qemu_virt_el0_serial.sh  verify_kernel_qemu_virt_serial.sh  verify_qemu_minimal.sh
syscall_abi/: Cargo.toml
syscall_abi/src/: lib.rs  user.rs
